--- a/charts/patroni/values.yaml
+++ b/charts/patroni/values.yaml
@@ -146,6 +146,9 @@ serviceAccount:
   # If not set and create is true, a name is generated using the fullname template
   name:
 
+extraInitContainers: []
+extraContainers: []
+
 spiloConfiguration: {}
 
 tls:
